--- a/Chirper/docker-compose.yml
+++ b/Chirper/docker-compose.yml
@@ -1,17 +1,31 @@
-version: '3.3'
+version: '3'
 services:
-  nginx:
-    build: ./nginx
-    ports:
-      - '80:80'
-      - '443:443'
   mongo:
     image: mongo:4.2.5
     ports:
       - '27017:27017'
-  app:
-    build: .
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
       WAIT_HOSTS: mongo:27017
     ports:
-      - '8080:8080'
+      - "8080:8080"
+    volumes:
+      - /etc/letsencrypt/live/chirper.one/fullchain.pem:/etc/letsencrypt/live/chirper.one/fullchain.pem
+      - /etc/letsencrypt/live/chirper.one/privkey.pem:/etc/letsencrypt/live/chirper.one/privkey.pem
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    image: nginx:latest
+    ports:
+      - '80:80'
+      - '443:443'
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt/live/chirper.one/fullchain.pem:/etc/letsencrypt/live/chirper.one/fullchain.pem
+      - /etc/letsencrypt/live/chirper.one/privkey.pem:/etc/letsencrypt/live/chirper.one/privkey.pem
+    links:
+      - web
