--- a/Chirper/nginx/default.conf
+++ b/Chirper/nginx/default.conf
@@ -1,16 +1,24 @@
 server {
     listen 80;
+    server_name chirper.one;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
     listen 443 ssl;
-    server_name localhost;
 
     ssl_certificate /etc/nginx/cert.pem;
     ssl_certificate_key /etc/nginx/private.key;  
 
     location / {
-        proxy_pass http://app:8080;
+        proxy_pass http://127.0.0.1:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-
+	    proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
